Fixed horizontal scroll

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -8,6 +8,7 @@ html
         @import 'partials/dashboard/core'
 
         overflow-y: hidden
+        overflow-x: overlay
 
         noscript
             @extend .abs-center
